--- a/CorsoEnaip2018_pizza-store/index.html
+++ b/CorsoEnaip2018_pizza-store/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <nav>
-      <img src="images/logo.jpg" height="20px" />
+      <img src="images/logo.jpg" class="logo-img" />
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="menu.html">Menu</a></li>
