--- a/CorsoEnaip2018_pizza-store/menu.html
+++ b/CorsoEnaip2018_pizza-store/menu.html
@@ -22,16 +22,40 @@
     <h1>Menu!</h1>
     
     <article>
-      <img src="images/menu-margherita.jpg" />
-      <h2>Margherita</h2>
-      <p>Pomodoro e mozzarella</p>
+      <table class="menu">
+        <tbody>
+          <tr>
+            <td rowspan="2" class="menu-img-td">
+              <img class="menu-img" src="images/menu-margherita.jpg" />
+            </td>
+            <td><h2>Margherita</h2></td>
+          </tr>
+          <tr>
+            <td>
+              <p>Pomodoro e mozzarella</p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </article>
 
     <article>
-      <img src="images/menu-diavola.jpg" />
-      <h2>Diavola</h2>
-      <p>Pomodoro, mozzarella, salame piccante</p>
-    </article>
+      <table class="menu">
+        <tbody>
+          <tr>
+            <td rowspan="2" class="menu-img-td">
+              <img class="menu-img" src="images/menu-diavola.jpg" />
+            </td>
+            <td><h2>Diavola</h2></td>
+          </tr>
+          <tr>
+            <td>
+              <p>Pomodoro, mozzarella, salame piccante</p>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </article>   
   </main>
   <footer>
     <p>Pizza Store srl - p.iva 123123123 - tel: 040555555</p>
