--- a/CorsoEnaip2018_Tria/wwwroot/index.html
+++ b/CorsoEnaip2018_Tria/wwwroot/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Tria</title>
     <style>
         body {
             width: 700px;
